3.2.9 (2017-04-XX)
------------------

New features
 -

Enhancements
 -

Bug fixes
 - [core] cherry-picked comma escaping fix from v2 (#3296)

3.2.8 (2017-03-24)
------------------

New features
 - [core] new sogo-tool manage-acl command to manage calendar/address book ACLs

Enhancements
 - [web] constrain event/task reminder to a positive number
 - [web] display year in day and week views
 - [web] split string on comma and semicolon when pasting multiple addresses (#4097)
 - [web] restrict Draft/Sent/Trash/Junk mailboxes to the top level
 - [web] animations are automatically disabled under IE11
 - [web] updated Angular Material to version 1.1.3

Bug fixes
 - [core] handle broken CalDAV clients sending bogus SENT-BY (#3992)
 - [core] fixed handling of exdates and proper intersection for fbinfo (#4051)
 - [core] remove attendees that have the same identity as the organizer (#3905)
 - [web] fixed ACL editor in admin module for Safari (#4036)
 - [web] fixed function call when removing contact category (#4039)
 - [web] localized mailbox names everywhere (#4040, #4041)
 - [web] hide fab button when printing (#4038)
 - [web] SOGoCalendarWeekdays must now be defined before saving preferences
 - [web] fixed CAS session timeout handling during XHR requests (#1456)
 - [web] exposed default value of SOGoMailAutoSave (#4053)
 - [web] exposed default value of SOGoMailAddOutgoingAddresses (#4064)
 - [web] fixed handling of contact organizations (#4028)
 - [web] fixed handling of attachments in mail editor (#4058, #4063)
 - [web] fixed saving draft outside Mail module (#4071)
 - [web] fixed SCAYT automatic language selection in HTML editor
 - [web] fixed task sorting on multiple categories
 - [web] fixed sanitisation of flags in Sieve filters (#4087)
 - [web] fixed missing CC or BCC when specified before sending message (#3944)
 - [web] enabled Save button after deleting attributes from a card (#4095)