@@ -8,6 +8,7 @@ Enhancements
  -
 
 Bug fixes
+ - [web] fixed attachment path when inside multiple body parts
  - [core] cherry-picked comma escaping fix from v2 (#3296)
 
 3.2.8 (2017-03-24)
